[metadata]
name = cannon
description_file = readme.md
author = Canonical BootStack DevOps Center
author_email = bootstack-doc@lists.canonical.com
summary = Canonical OpenStack validation suite
home_page = https://github.com/canonical/cannon
python_requires = >=3.8
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Environment :: Console
    Environment :: OpenStack

[files]
packages =
    cannon

[entry_points]
console_scripts =
    cannon = cannon.main:main

cannon.cli =
    functional run = cannon.functional.cmd:Run
